src/main/metadata-au/objects/MonthlyRule__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>MonthlyRule</description>
    <fields>
        <fullName>ATL_BTL__c</fullName>
        <label>ATL/BTL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driven__c</fullName>
        <label>Driven</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Type__c</fullName>
        <label>KPI Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MonthlyRule</label>
</CustomObject>